--- a/_layouts/leap_day_customized_v1.html
+++ b/_layouts/leap_day_customized_v1.html
@@ -25,7 +25,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="/" class="button"><strong>Home</strong></a>
+        <a href="{{site.url}}" class="button"><strong>Home</strong></a>
 
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
@@ -46,6 +46,9 @@
       <section>
         {{ content }}
 
+      </section>
+      <section>
+        {{site.pages}}
       </section>
       <footer>
         {% if site.github.is_project_page %}
