--- a/_layouts/leap_day_customized_v1.html
+++ b/_layouts/leap_day_customized_v1.html
@@ -27,6 +27,7 @@
 
         <a href="{{site.url}}{{page.dir}}" class="button"><strong>Up</strong></a>
         <a href="{{site.url}}" class="button"><strong>Home</strong></a>
+        <a href="{{site.url}}pagemap.html">Page Map</a>
 
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
