--- a/_layouts/leap_day_customized_v1.html
+++ b/_layouts/leap_day_customized_v1.html
@@ -57,7 +57,7 @@ layout_name: leap_day_customized_v1
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a>, customized by <a href="{{site.github.owner_url}}">{{ site.github.owner_name }}</a> as <a href="{{site.github.repository_url}}/blob/main/_layouts/{{layout.layout_name}}">the layout</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a>, customized by <a href="{{site.github.owner_url}}">{{ site.github.owner_name }}</a> as <a href="{{site.github.repository_url}}/blob/main/_layouts/{{layout.layout_name}}.html">the layout</a></small></p>
       </footer>
     </div>
   </body>
