--- a/_layouts/leap_day_customized_v1.html
+++ b/_layouts/leap_day_customized_v1.html
@@ -31,7 +31,7 @@ layout_name: leap_day_customized_v1
 
         <a href="{{site.github.url}}{{page.dir}}" class="button"><strong>Up</strong></a>
         <a href="{{site.github.url}}" class="button"><strong>Home</strong></a>
-        <a href="{{site.github.url}}/pagemap.html">Page Map</a>
+        <a href="{{site.github.url}}/pagemap.html" class="button">Page Map</a>
 
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
