more and more crazy

--- a/_layouts/liquid_officialpage_2022-12-17.html
+++ b/_layouts/liquid_officialpage_2022-12-17.html
@@ -16,9 +16,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
-    <link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}">
-    <link rel="icon" type="image/png" href="{{ '/images/icons/water-drop-32x.png' | relative_url }}" sizes="32x32">
-    <link rel="icon" type="image/png" href="{{ '/images/icons/water-drop-64x.png' | relative_url }}" sizes="64x64">
+    <link rel="stylesheet" href="{{ '/liquid_web/css/main.css' | relative_url }}">
+    <link rel="icon" type="image/png" href="{{ '/liquid_web/images/icons/water-drop-32x.png' | relative_url }}" sizes="32x32">
+    <link rel="icon" type="image/png" href="{{ '/liquid_web/images/icons/water-drop-64x.png' | relative_url }}" sizes="64x64">
     <link rel="canonical" href="{{ page.url | replace: 'index.html','' | absolute_url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | relative_url }}" />
 
@@ -65,6 +65,6 @@
         {{ content }}
       </div>
     </main>
-    <script src="{{ '/js/liquid/script.js' | relative_url }}"></script>
+    <script src="{{ '/liquid_web/js/script.js' | relative_url }}"></script>
   </body>
 </html>
