--- a/liquid_web/css/main.scss
+++ b/liquid_web/css/main.scss
@@ -4,16 +4,16 @@ layout: null
 
 @charset "utf-8";
 
-@import "/liquid_web/_sass/partials/defaults | relative_url";
-@import "/liquid_web/_sass/partials/colors | relative_url";
-@import "/liquid_web/_sass/partials/helpers | relative_url";
-@import "/liquid_web/_sass/partials/media-queries | relative_url";
+@import "{{'/liquid_web/_sass/partials/defaults' | relative_url}}";
+@import "{{'/liquid_web/_sass/partials/colors' | relative_url}}";
+@import "{{'/liquid_web/_sass/partials/helpers' | relative_url}}";
+@import "{{'/liquid_web/_sass/partials/media-queries' | relative_url}}";
 
-@import "/liquid_web/_sass/modules/base | relative_url";
-@import "/liquid_web/_sass/modules/layout | relative_url";
-@import "/liquid_web/_sass/modules/buttons | relative_url";
-@import "/liquid_web/_sass/modules/home-banner | relative_url";
-@import "/liquid_web/_sass/modules/home-users-grid | relative_url";
-@import "/liquid_web/_sass/modules/content-area | relative_url";
+@import "{{'/liquid_web/_sass/modules/base' | relative_url}}";
+@import "{{'/liquid_web/_sass/modules/layout' | relative_url}}";
+@import "{{'/liquid_web/_sass/modules/buttons' | relative_url}}";
+@import "{{'/liquid_web/_sass/modules/home-banner' | relative_url}}";
+@import "{{'/liquid_web/_sass/modules/home-users-grid' | relative_url}}";
+@import "{{'/liquid_web/_sass/modules/content-area' | relative_url}}";
 
-@import "/liquid_web/_sass/vendors/syntax-highlighting | relative_url";
+@import "{{'/liquid_web/_sass/vendors/syntax-highlighting' | relative_url}}";
