--- a/_layouts/liquid_officialpage_2022-12-17.html
+++ b/_layouts/liquid_officialpage_2022-12-17.html
@@ -53,7 +53,7 @@
     <main class="content__area" role="main">
       <div class="content">
         <button class="menu-button">
-          <span aria-hidden="true">{% include icons/three-bars.svg %}</span>
+          <span aria-hidden="true">{% include liquid_web/icons/three-bars.svg %}</span>
           <span>Menu</span>
         </button>
         {% if page.title -%}
