--- a/_includes/liquid_web/sidebar_localized_v1.html
+++ b/_includes/liquid_web/sidebar_localized_v1.html
@@ -30,4 +30,10 @@
     </script>
     {%- endif -%}
   </nav>
+  <div>
+    <small>
+      <p>This is completely localized version.</p>
+      <a href="{{'/pagemap.html' | relative_url}}" class="menu-button">Page Map</a>
+    </small>
+  </div>
 </div>
