--- a/_layouts/liquid_officialpage_2022-12-17.html
+++ b/_layouts/liquid_officialpage_2022-12-17.html
@@ -47,7 +47,7 @@
 
   <body>
 
-    {% include liquid_web/sidebar.html %}
+    {% include liquid_web/sidebar_localized_v1.html %}
 
     <div class="content__overlay"></div>
     <main class="content__area" role="main">
