--- a/_includes/liquid_web/sidebar_localized_v1.html
+++ b/_includes/liquid_web/sidebar_localized_v1.html
@@ -32,8 +32,8 @@
   </nav>
   <div>
     <small>
-      <p>This is completely localized version.</p>
-      <a href="{{'/pagemap.html' | relative_url}}" class="menu-button">Page Map</a>
+      <p style="color:white;">This is the completely localized version.</p>
+      <a href="{{'/pagemap.html' | relative_url}}" class="button">Page Map</a>
     </small>
   </div>
 </div>
