--- a/_includes/liquid_web/sidebar_localized_v1.html
+++ b/_includes/liquid_web/sidebar_localized_v1.html
@@ -30,10 +30,10 @@
     </script>
     {%- endif -%}
   </nav>
-  <div>
+  <footer style="text-align:center">
     <small>
       <p style="color:white;">This is the completely localized version.</p>
       <a href="{{'/pagemap.html' | relative_url}}" class="button">Page Map</a>
     </small>
-  </div>
+  </footer>
 </div>
