change layout v2 defaults

--- a/_layouts/leap_day_customized_v2.html
+++ b/_layouts/leap_day_customized_v2.html
@@ -25,7 +25,7 @@ layout_name: leap_day_customized_v2
       <header>
         <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
         <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
-        <p>Auther: {{ page.auther | default: site.auther }}, Date: {{ page.date | default: "Unknown" }}, Categories: {{ page.categories | default:"[Not Specified]" }}, Tags: {{ page.tags | default:"[Not Specified]" }}</p>
+        <p>Auther: {{ page.auther | default: site.auther }}, Date: {{ page.date | default: "Unknown" }}, Categories: {{ page.categories }}, Tags: {{ page.tags }}</p>
       </header>
 
       <div id="banner">
