--- a/_layouts/leap_day_customized_v3.html
+++ b/_layouts/leap_day_customized_v3.html
@@ -57,7 +57,7 @@ layout_name: leap_day_customized_v2
           <b>Starring Links: </b>
           <ol>
             {%- for link in page.redirect_from -%}
-            <li><a style="color:yellow" href="{{ site.github.url }}{{ link }}">{{ link }}</a></li>
+            <li><a style="color:rgb(228, 194, 0)" href="{{ site.github.url }}{{ link }}">{{ link }}</a></li>
             {%- endfor -%}
           </ol>
         </section>
