--- a/_layouts/leap_day_customized_v3.html
+++ b/_layouts/leap_day_customized_v3.html
@@ -18,7 +18,7 @@ layout_name: leap_day_customized_v2
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    {% include head-custom.html %}
+    <!-- {% include head-custom.html %} -->
   </head>
   <body>
 
