--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -450,13 +450,14 @@ footer {
       float: none;
       display: inline-block;
       margin-left: 0px;
+      margin-right: 0px;
       position: fixed;
       right: 60px;
     }
 
     #logo {
-        margin-right: 5px;
-        margin-top: 60px;
+        margin-right: 15px;
+        margin-top: 0px;
     }
   }
 
@@ -491,12 +492,17 @@ footer {
   }
 
   #banner {
-    top: 60px;
+    top: 0px;
+    position: sticky;
 
     .fork {
-      margin-right: 0px;
       right: 60px;
       position: absolute;
+    }
+
+    #logo {
+        margin-right: 10px;
+        margin-top: 0px;
     }
   }
 
