--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -391,6 +391,7 @@ footer {
 
   #banner {
     width: 100%;
+    padding-right: 0px;
 
     .downloads {
         margin-right: 60px;
@@ -406,7 +407,8 @@ footer {
     }
 
     #logo {
-      margin-right: 15px;
+      right: 0px
+      margin-right: 12px;
     }
   }
 
@@ -456,7 +458,6 @@ footer {
     }
 
     #logo {
-        margin-right: 15px;
         margin-top: 0px;
     }
   }
@@ -501,7 +502,6 @@ footer {
     }
 
     #logo {
-        margin-right: 10px;
         margin-top: 0px;
     }
   }
