--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -453,7 +453,7 @@ footer {
 
   #banner {
     top: 80px;
-    padding-right: 0px;
+    // padding-right: 0px;
 
     .fork {
     }
@@ -496,7 +496,7 @@ footer {
   #banner {
     top: 0px;
     position: sticky;
-    padding-right: 0px;
+    // padding-right: 0px;
 
     .fork {
       right: 60px;
