修正移动端布局错误

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -454,6 +454,8 @@ footer {
   #banner {
     top: 80px;
     // padding-right: 0px;
+    border-left: 0px;
+    border-right: 0px;
 
     .fork {
     }
