--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -362,6 +362,7 @@ footer {
   // left:50%;
   // margin-left:-530px;
   margin-top: 20px;
+  top: 20px;
   bottom:20px;
   text-align: right;
   line-height: 16px;
