--- a/_layouts/leap_day_customized_v3.html
+++ b/_layouts/leap_day_customized_v3.html
@@ -71,7 +71,9 @@ layout_name: leap_day_customized_v2
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a>,
            customized by <a href="https://github.com/LiuJiewenTT">LiuJiewenTT</a> 
-           as <a href="{{site.github.repository_url}}/blob/main/_layouts/{{layout.layout_name}}.html">the layout</a>
+           as <a href="{{site.github.repository_url}}/blob/main/_layouts/{{layout.layout_name}}.html">the layout</a>,
+           styled by <a href="https://github.com/LiuJiewenTT">LiuJiewenTT</a> 
+           as <a href="{{site.github.repository_url}}/blob/main/_sass/jekyll-theme-leap-day.scss">the scss</a>.
         </small></p>
       </footer>
     </div>
