--- a/_layouts/leap_day_customized_v4.html
+++ b/_layouts/leap_day_customized_v4.html
@@ -91,7 +91,7 @@ layout_name: leap_day_customized_v4
                 }
         };
         mermaid.initialize(config);
-        window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+        // window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
     </script>
     
   </body>
