--- a/_layouts/leap_day_customized_v4.html
+++ b/_layouts/leap_day_customized_v4.html
@@ -20,31 +20,47 @@ layout_name: leap_day_customized_v4
 
   </head>
   <body>
+    <!-- Support for Mermaid Graphs
+            The tutorial link(Under this website): /docs/Jekyll/Jekyll下Markdown的填坑技巧
+    -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0/mermaid.min.js"></script>
+    <script>
+        var config = {
+            startOnLoad:true,
+            theme: 'forest',
+            flowchart:{
+                    useMaxWidth:true,
+                    htmlLabels:true
+                }
+        };
+        mermaid.initialize(config);
+        window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+    </script>
 
-      <header>
-        <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-        <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
-        <p>Author: {{ page.author | default: site.auther }}, Date: {{ page.date | default: "Unknown" }}, Categories: {{ page.categories }}, Tags: {{ page.tags }}</p>
-      </header>
+    <header>
+      <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+      <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
+      <p>Author: {{ page.author | default: site.auther }}, Date: {{ page.date | default: "Unknown" }}, Categories: {{ page.categories }}, Tags: {{ page.tags }}</p>
+    </header>
 
-      <div id="banner">
-        <span id="logo"></span>
+    <div id="banner">
+      <span id="logo"></span>
 
-        <a href="{{site.github.url}}{{page.dir}}" class="button"><strong>Up</strong></a>
-        <a href="{{site.github.url}}" class="button"><strong>Home</strong></a>
-        <a href="{{site.github.url}}/pagemap.html" class="button">Page Map</a>
+      <a href="{{site.github.url}}{{page.dir}}" class="button"><strong>Up</strong></a>
+      <a href="{{site.github.url}}" class="button"><strong>Home</strong></a>
+      <a href="{{site.github.url}}/pagemap.html" class="button">Page Map</a>
 
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
-        {% if site.show_downloads %}
-          <div class="downloads">
-            <span>Downloads:</span>
-            <ul>
-              <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
-              <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
-            </ul>
-          </div>
-        {% endif %}
-      </div><!-- end banner -->
+      <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+      {% if site.show_downloads %}
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
+            <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
+          </ul>
+        </div>
+      {% endif %}
+    </div><!-- end banner -->
 
     <div class="wrapper">
       <nav>
@@ -76,23 +92,6 @@ layout_name: leap_day_customized_v4
         </small></p>
       </footer>
     </div>
-
-    <!-- Support for Mermaid Graphs
-            The tutorial link(Under this website): /docs/Jekyll/Jekyll下Markdown的填坑技巧
-    -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0/mermaid.min.js"></script>
-    <script>
-        var config = {
-            startOnLoad:true,
-            theme: 'forest',
-            flowchart:{
-                    useMaxWidth:true,
-                    htmlLabels:true
-                }
-        };
-        mermaid.initialize(config);
-        // window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
-    </script>
     
   </body>
 </html>
