--- a/_layouts/leap_day_customized_v4.html
+++ b/_layouts/leap_day_customized_v4.html
@@ -20,22 +20,6 @@ layout_name: leap_day_customized_v4
 
   </head>
   <body>
-    <!-- Support for Mermaid Graphs
-            The tutorial link(Under this website): /docs/Jekyll/Jekyll下Markdown的填坑技巧
-    -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0/mermaid.min.js"></script>
-    <script>
-        var config = {
-            startOnLoad:true,
-            theme: 'forest',
-            flowchart:{
-                    useMaxWidth:true,
-                    htmlLabels:true
-                }
-        };
-        mermaid.initialize(config);
-        window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
-    </script>
 
     <header>
       <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
@@ -93,5 +77,22 @@ layout_name: leap_day_customized_v4
       </footer>
     </div>
     
+    <!-- Support for Mermaid Graphs
+            The tutorial link(Under this website): /docs/Jekyll/Jekyll下Markdown的填坑技巧
+    -->
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@9/dist/mermaid.esm.min.mjs"></script>
+    <script>
+        var config = {
+            startOnLoad:true,
+            theme: 'forest',
+            flowchart:{
+                    useMaxWidth:true,
+                    htmlLabels:true
+                }
+        };
+        mermaid.initialize(config);
+        window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+    </script>
+
   </body>
 </html>
