--- a/_layouts/leap_day_customized_v4.html
+++ b/_layouts/leap_day_customized_v4.html
@@ -82,15 +82,16 @@ layout_name: leap_day_customized_v4
     -->
     <script src="https://cdn.jsdelivr.net/npm/mermaid@9/dist/mermaid.esm.min.mjs"></script>
     <script>
-        var config = {
-            startOnLoad:true,
-            theme: 'forest',
-            flowchart:{
-                    useMaxWidth:true,
-                    htmlLabels:true
-                }
-        };
-        mermaid.initialize(config);
+        // var config = {
+        //     startOnLoad:true,
+        //     theme: 'forest',
+        //     flowchart:{
+        //             useMaxWidth:true,
+        //             htmlLabels:true
+        //         }
+        // };
+        // mermaid.initialize(config);
+        mermaid.initialize({ startOnLoad: true });
         window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
     </script>
 
