--- a/_layouts/leap_day_customized_v4.html
+++ b/_layouts/leap_day_customized_v4.html
@@ -80,7 +80,7 @@ layout_name: leap_day_customized_v4
     <!-- Support for Mermaid Graphs
             The tutorial link(Under this website): /docs/Jekyll/Jekyll下Markdown的填坑技巧
     -->
-    <script src="https://cdn.jsdelivr.net/npm/mermaid@9/dist/mermaid.esm.min.mjs"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@9.4.0/dist/mermaid.min.js"></script>
     <script>
         // var config = {
         //     startOnLoad:true,
