--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -96,6 +96,9 @@ code {
   padding: 2px 6px;
   background: #333;
   border-radius: 2px;
+  language-mermaid{
+    background-color: #ffeca0;
+  }
 }
 
 pre {
