--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -96,7 +96,7 @@ code {
   padding: 2px 6px;
   background: #333;
   border-radius: 2px;
-  language-mermaid{
+  .language-mermaid{
     background-color: #ffeca0;
   }
 }
