--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -96,8 +96,8 @@ code {
   padding: 2px 6px;
   background: #333;
   border-radius: 2px;
-  .language-mermaid{
-    background-color: #ffeca0;
+  .language-mermaid {
+    background: #ffeca0;
   }
 }
 
@@ -112,8 +112,8 @@ pre {
   code {
     margin: 0px;
     padding: 0px;
-    .language-mermaid{
-      background-color: #ffeca0;
+    .language-mermaid {
+      background: #ffeca0;
     }
   }
 }
