--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -96,9 +96,17 @@ code {
   padding: 2px 6px;
   background: #333;
   border-radius: 2px;
-  :has(.language-mermaid) {
-    background: #ffeca0;
-  }
+}
+code:has(.language-mermaid) {
+  font-family: 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  font-size:13px;
+  color:#efefef;
+  text-shadow: 0px 1px 0px #000;
+  margin: 0 4px;
+  padding: 2px 6px;
+  border-radius: 2px;
+
+  background: #ffeca0;
 }
 
 pre {
@@ -112,9 +120,12 @@ pre {
   code {
     margin: 0px;
     padding: 0px;
-    :has(.language-mermaid) {
-      background: #ffeca0;
-    }
+    
+  }
+  code:has(.language-mermaid) {
+    margin: 0px;
+    padding: 0px;
+    background: #ffeca0;
   }
 }
 
