--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -97,17 +97,6 @@ code {
   background: #333;
   border-radius: 2px;
 }
-code:has(.language-mermaid) {
-  font-family: 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  font-size:13px;
-  color:#efefef;
-  text-shadow: 0px 1px 0px #000;
-  margin: 0 4px;
-  padding: 2px 6px;
-  border-radius: 2px;
-
-  background: #ffeca0;
-}
 
 pre {
   padding:8px 15px;
@@ -116,20 +105,14 @@ pre {
   border:1px solid #c7c7c7;
   overflow: auto;
   overflow-y: hidden;
-
   code {
     margin: 0px;
     padding: 0px;
   }
-  code:has(.language-mermaid) {
-    margin: 0px;
-    padding: 0px;
-    background: #ffeca0;
-  }
 }
-pre :has(code.language-mermaid) {
+pre:has(.language-mermaid) {
   padding:8px 15px;
-  background: #ffeca0;
+  background: #ffffa029;
   border-radius: 3px;
   border:1px solid #c7c7c7;
   overflow: auto;
@@ -137,6 +120,9 @@ pre :has(code.language-mermaid) {
   code {
     margin: 0px;
     padding: 0px;
+    svg {
+      fill: #ffffa029;
+    }
   }
 }
 
