--- a/_layouts/leap_day_customized_v4.html
+++ b/_layouts/leap_day_customized_v4.html
@@ -86,7 +86,8 @@ layout_name: leap_day_customized_v4
             startOnLoad:true,
             theme: 'forest',
             themeVariables: {
-              darkMode: false
+              darkMode: false,
+              background: 0xffffa029
             },
             flowchart:{
                     useMaxWidth:true,
