--- a/_layouts/leap_day_customized_v4.html
+++ b/_layouts/leap_day_customized_v4.html
@@ -87,12 +87,8 @@ layout_name: leap_day_customized_v4
             theme: 'forest',
             themeVariables: {
               darkMode: false,
-              background: 0xffffa029
-            },
-            flowchart:{
-                    useMaxWidth:true,
-                    htmlLabels:true
-                }
+              background: #ffffff
+            }
         };
         mermaid.initialize(config);
         // mermaid.initialize({ startOnLoad: true });
