--- a/_layouts/leap_day_customized_v4.html
+++ b/_layouts/leap_day_customized_v4.html
@@ -87,7 +87,7 @@ layout_name: leap_day_customized_v4
             theme: 'forest',
             themeVariables: {
               darkMode: false,
-              background: #ffffff
+              background: 0xffffff
             }
         };
         mermaid.initialize(config);
