--- a/_layouts/leap_day_customized_v4.html
+++ b/_layouts/leap_day_customized_v4.html
@@ -84,15 +84,11 @@ layout_name: leap_day_customized_v4
     <script>
         var config = {
             startOnLoad:true,
-            theme: 'forest',
-            themeVariables: {
-              darkMode: false,
-              background: 0xffffff
-            }
+            theme: 'forest'
         };
         mermaid.initialize(config);
         // mermaid.initialize({ startOnLoad: true });
-        window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+        mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
     </script>
 
   </body>
