--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -117,11 +117,12 @@ pre:has(.language-mermaid) {
   border:1px solid #c7c7c7;
   overflow: auto;
   overflow-y: hidden;
-  // width:100%;
-  // margin:auto;
+  
   code {
     margin: 0px;
     padding: 0px;
+    text-shadow: 0 0 black;
+    
     svg {
       fill: #ffffa029;
       display: flex;
