--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -115,8 +115,8 @@ pre {
     text-shadow: 0 0 black;
     svg {
       background: #ffffa0;
+      display: flex;
       // fill: #ffffa029;
-      // display: contents;
       width:100%;
       margin:auto;
     }
