--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -138,6 +138,7 @@ pre:has(.language-mermaid) {
     
     svg {
       // fill: #ffffa029;
+      background: #ffffff00;
       display: flex;
       width:100%;
       margin:auto;
