--- a/_layouts/leap_day_customized_v5.html
+++ b/_layouts/leap_day_customized_v5.html
@@ -28,13 +28,20 @@ layout_name: leap_day_customized_v5
     </header>
 
     <div id="banner">
-      <span id="logo"></span>
+      {%- if site.allow_download_doc and page.allow_download_doc -%}
+      <a href="{{site.github.repository_url}}/raw/{{site.github.source.branch}}{{page.url}}">
+        <span id="logo" ></span>
+      </a>
+      {%- else -%}
+      <span id="logo" ></span>
+      {%- endif -%}
+      
 
       <a href="{{site.github.url}}{{page.dir}}" class="button"><strong>Up</strong></a>
       <a href="{{site.github.url}}" class="button"><strong>Home</strong></a>
       <a href="{{site.github.url}}/pagemap.html" class="button">Page Map</a>
 
-      <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+      <a href="{{ site.github.repository_url }}/tree/{{site.github.source.branch}}{{page.url}}" class="button fork"><strong>View On GitHub</strong></a>
       {% if site.show_downloads %}
         <div class="downloads">
           <span>Downloads:</span>
