--- a/_layouts/leap_day_customized_v5.html
+++ b/_layouts/leap_day_customized_v5.html
@@ -28,10 +28,12 @@ layout_name: leap_day_customized_v5
     </header>
 
     <div id="banner">
-      {%- if site.allow_download_doc and page.allow_download_doc -%}
-      <a href="{{site.github.repository_url}}/raw/{{site.github.source.branch}}{{page.url}}">
+      {%- if site.allow_download_doc -%}
+      {%- if page.allow_download_doc == nil or page.allow_download_doc -%}
+      <a href="{{site.github.repository_url}}/raw/{{site.github.source.branch}}{{page.path}}">
         <span id="logo" ></span>
       </a>
+      {%- endif -%}
       {%- else -%}
       <span id="logo" ></span>
       {%- endif -%}
@@ -41,7 +43,7 @@ layout_name: leap_day_customized_v5
       <a href="{{site.github.url}}" class="button"><strong>Home</strong></a>
       <a href="{{site.github.url}}/pagemap.html" class="button">Page Map</a>
 
-      <a href="{{ site.github.repository_url }}/tree/{{site.github.source.branch}}{{page.url}}" class="button fork"><strong>View On GitHub</strong></a>
+      <a href="{{ site.github.repository_url }}/tree/{{site.github.source.branch}}{{page.path}}" class="button fork"><strong>View On GitHub</strong></a>
       {% if site.show_downloads %}
         <div class="downloads">
           <span>Downloads:</span>
@@ -58,6 +60,8 @@ layout_name: leap_day_customized_v5
         <ul></ul>
       </nav>
       <section>
+        <p>site.allow_download_doc: {{site.allow_download_doc}}</p>
+        <p>page.allow_download_doc: {{page.allow_download_doc}}</p>
         {%- if page.redirect_from -%}
         <section style="height:min-content; margin-top: 0px; padding-bottom: 30px;">
           <b>Starring Links: </b>
