--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -96,6 +96,11 @@ code {
   padding: 2px 6px;
   background: #333;
   border-radius: 2px;
+  .err{
+    background-color: #df8202;
+    color: white;
+    // text-shadow: none;
+  }
 }
 
 pre {
