--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -96,6 +96,9 @@ code {
   padding: 2px 6px;
   background: #333;
   border-radius: 2px;
+}
+
+.highlight{
   .err{
     background-color: #df8202;
     color: white;
@@ -114,11 +117,7 @@ pre {
   code {
     margin: 0px;
     padding: 0px;
-    .err{
-      background-color: #df8202;
-      color: white;
-      // text-shadow: none;
-    }
+    
   }
   
   .language-mermaid {
