上传最近这些天的文档

--- a/_layouts/leap_day_customized_v5.html
+++ b/_layouts/leap_day_customized_v5.html
@@ -82,8 +82,8 @@ layout_name: leap_day_customized_v5
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a>,
            customized by <a href="https://github.com/LiuJiewenTT">LiuJiewenTT</a> 
-           as <a href="{{site.github.repository_url}}/blob/main/_layouts/{{layout.layout_name}}.html">the layout</a>,
-           <a href="{{site.github.repository_url}}/blob/main/_sass/jekyll-theme-leap-day.scss">the scss</a>.
+           as <a href="{{site.github.repository_url}}/blob/{{site.github.source.branch}}/_layouts/{{layout.layout_name}}.html">the layout</a>,
+           <a href="{{site.github.repository_url}}/blob/{{site.github.source.branch}}/_sass/jekyll-theme-leap-day.scss">the scss</a>.
         </small></p>
       </footer>
     </div>
