Move to new layout, not completed.

--- a/_layouts/leap_day_customized_v6.html
+++ b/_layouts/leap_day_customized_v6.html
@@ -16,7 +16,7 @@ layout_name: leap_day_customized_v5
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
   </head>
   <body>
@@ -24,7 +24,16 @@ layout_name: leap_day_customized_v5
     <header>
       <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
-      <p>Author: {{ page.author | default: site.auther }}, Date: {{ page.date | default: "Unknown" }}, Categories: {{ page.categories }}, Tags: {{ page.tags }}</p>
+      <p>Author: {{ page.author | default: site.auther }}, Date: {{ page.date | default: "Unknown" }}</p>
+      <p>Categories:%20
+        {%- for category in page.categories -%}
+          {{ category }};
+        {%- endfor -%}.%20
+        Tags:%20
+        {%- for tag in page.tags -%}
+          {{ tag }};
+        {%- endfor -%}.
+      </p>
     </header>
 
     <div id="banner">
