--- a/_layouts/leap_day_customized_v5.1.html
+++ b/_layouts/leap_day_customized_v5.1.html
@@ -23,6 +23,7 @@ layout_name: leap_day_customized_v5.1
 
     {%- if page.author == nil and page.allow_download_doc == nil -%}
       {%- assign page.allow_download_doc=false -%}
+      {%- assign page.author=site.author -%}
     {%- endif -%}
 
     <header>
