--- a/_layouts/leap_day_customized_v5.1.html
+++ b/_layouts/leap_day_customized_v5.1.html
@@ -22,6 +22,7 @@ layout_name: leap_day_customized_v5.1
   <body>
 
     {%- if page.author == nil and page.allow_download_doc == nil -%}
+      <p>should not download</p>
       {%- assign page.allow_download_doc=false -%}
       {%- assign page.author=site.author -%}
     {%- endif -%}
@@ -33,8 +34,8 @@ layout_name: leap_day_customized_v5.1
     </header>
 
     <div id="banner">
-      {%- if site.allow_download_doc -%}
-      {%- if page.allow_download_doc == nil or page.allow_download_doc -%}
+      {%- if site.allow_download_doc == true -%}
+      {%- if page.allow_download_doc == nil or page.allow_download_doc == true -%}
       <a href="{{site.github.repository_url}}/raw/{{site.github.source.branch}}/{{page.path}}">
         <span id="logo" ></span>
       </a>
