--- a/_layouts/leap_day_customized_v5.html
+++ b/_layouts/leap_day_customized_v5.html
@@ -60,8 +60,8 @@ layout_name: leap_day_customized_v5
         <ul></ul>
       </nav>
       <section>
-        <p>site.allow_download_doc: {{site.allow_download_doc}}</p>
-        <p>page.allow_download_doc: {{page.allow_download_doc}}</p>
+        <!-- <p>site.allow_download_doc: {{site.allow_download_doc}}</p>
+        <p>page.allow_download_doc: {{page.allow_download_doc}}</p> -->
         {%- if page.redirect_from -%}
         <section style="height:min-content; margin-top: 0px; padding-bottom: 30px;">
           <b>Starring Links: </b>
