--- a/_layouts/leap_day_customized_v5.1.html
+++ b/_layouts/leap_day_customized_v5.1.html
@@ -22,9 +22,13 @@ layout_name: leap_day_customized_v5.1
   <body>
 
     {%- if page.author == nil and page.allow_download_doc == nil -%}
-      <p>should not download</p>
-      {%- page.allow_download_doc=false -%}
-      {%- page.author=site.author -%}
+      {%- comment -%}
+        <p>should not download</p>
+      {%- endcomment -%}
+      {%- assign allow_download_doc=false -%}
+      {%- capture page.author -%}
+        {{site.author}}
+      {%- endcapture -%}
     {%- endif -%}
 
     <header>
@@ -35,7 +39,7 @@ layout_name: leap_day_customized_v5.1
 
     <div id="banner">
       {%- if site.allow_download_doc == true -%}
-        {%- if page.allow_download_doc != false -%}
+        {%- if (page.allow_download_doc != false) and (allow_download_doc != false) -%}
           <a href="{{site.github.repository_url}}/raw/{{site.github.source.branch}}/{{page.path}}">
             <span id="logo" ></span>
           </a>
