--- a/_layouts/leap_day_customized_v5.1.html
+++ b/_layouts/leap_day_customized_v5.1.html
@@ -25,10 +25,14 @@ layout_name: leap_day_customized_v5.1
       {%- comment -%}
         <p>should not download</p>
       {%- endcomment -%}
-      {%- assign allow_download_doc=false -%}
-      {%- capture page.author -%}
-        {{site.author}}
-      {%- endcapture -%}
+      {%- assign allow_download_doc = false -%}
+      {%- comment -%}
+        {%- capture page.author -%}
+          {{site.author}}
+        {%- endcapture -%}
+      {%- endcomment -%}
+    {%- else -%}
+      {%- assign allow_download_doc = true -%}
     {%- endif -%}
 
     <header>
@@ -39,7 +43,7 @@ layout_name: leap_day_customized_v5.1
 
     <div id="banner">
       {%- if site.allow_download_doc == true -%}
-        {%- if (page.allow_download_doc != false) and (allow_download_doc != false) -%}
+        {%- if (page.allow_download_doc != false) and (allow_download_doc) -%}
           <a href="{{site.github.repository_url}}/raw/{{site.github.source.branch}}/{{page.path}}">
             <span id="logo" ></span>
           </a>
@@ -72,18 +76,18 @@ layout_name: leap_day_customized_v5.1
         <ul></ul>
       </nav>
       <section>
-        <p>page.author: {{page.author}}</p>
+        <!-- <p>page.author: {{page.author}}</p>
         <p>site.allow_download_doc: {{site.allow_download_doc}}</p>
-        <p>page.allow_download_doc: {{page.allow_download_doc}}</p>
+        <p>page.allow_download_doc: {{page.allow_download_doc}}</p> -->
         {%- if page.redirect_from -%}
-        <section style="height:min-content; margin-top: 0px; padding-bottom: 30px;">
-          <b>Starring Links: </b>
-          <ol>
-            {%- for link in page.redirect_from -%}
-            <li><a style="color:rgb(228, 194, 0)" href="{{ site.github.url }}{{ link }}">{{ link }}</a></li>
-            {%- endfor -%}
-          </ol>
-        </section>
+          <section style="height:min-content; margin-top: 0px; padding-bottom: 30px;">
+            <b>Starring Links: </b>
+            <ol>
+              {%- for link in page.redirect_from -%}
+                <li><a style="color:rgb(228, 194, 0)" href="{{ site.github.url }}{{ link }}">{{ link }}</a></li>
+              {%- endfor -%}
+            </ol>
+          </section>
         {%- endif -%}
 
         {{ content }}
