--- a/_layouts/leap_day_customized_v5.1.html
+++ b/_layouts/leap_day_customized_v5.1.html
@@ -43,7 +43,7 @@ layout_name: leap_day_customized_v5.1
 
     <div id="banner">
       {%- if site.allow_download_doc == true -%}
-        {%- if (page.allow_download_doc == nil or page.allow_download_doc == true) and (allow_download_doc) -%}
+        {%- if (page.allow_download_doc == nil or page.allow_download_doc == true) and (allow_download_doc != false) -%}
           <a href="{{site.github.repository_url}}/raw/{{site.github.source.branch}}/{{page.path}}">
             <span id="logo" ></span>
           </a>
