--- a/_layouts/leap_day_customized_v5.1.html
+++ b/_layouts/leap_day_customized_v5.1.html
@@ -42,8 +42,8 @@ layout_name: leap_day_customized_v5.1
     </header>
 
     <div id="banner">
-      {%- if site.allow_download_doc == true -%}
-        {%- if (page.allow_download_doc == nil or page.allow_download_doc == true) and (allow_download_doc == true) -%}
+      {%- if site.allow_download_doc == true and allow_download_doc == true -%}
+        {%- if page.allow_download_doc != false -%}
           <a href="{{site.github.repository_url}}/raw/{{site.github.source.branch}}/{{page.path}}">
             <span id="logo" ></span>
           </a>
