--- a/_layouts/leap_day_customized_v5.1.html
+++ b/_layouts/leap_day_customized_v5.1.html
@@ -76,10 +76,10 @@ layout_name: leap_day_customized_v5.1
         <ul></ul>
       </nav>
       <section>
-        <p>page.author: {{page.author}}</p>
+        <!-- <p>page.author: {{page.author}}</p>
         <p>site.allow_download_doc: {{site.allow_download_doc}}</p>
         <p>page.allow_download_doc: {{page.allow_download_doc}}</p>
-        <p>allow_download_doc: {{allow_download_doc}}</p>
+        <p>allow_download_doc: {{allow_download_doc}}</p> -->
         {%- if page.redirect_from -%}
           <section style="height:min-content; margin-top: 0px; padding-bottom: 30px;">
             <b>Starring Links: </b>
